# argon2-bench-rust

./: Cargo.toml  README.md  main.php
benches/: bench_main.rs
benches/benchmarks/: argon2.rs  argon2_bench.rs  argon2_kdf.rs  argon2_kdf_bench.rs  bcrypt.rs  mod.rs  rust_argon2.rs  scrypt.rs
