[package]
name = "argon2-bench-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3" }
argon2-kdf = "1.5.3"
rand = "0.8.5"
rust-argon2 = { package = "rust-argon2", version = "2.1.0" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
    "rayon",
] }

[[bench]]
name = "bench_main"
harness = false
